Source/WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -959,14 +959,14 @@ static Ref<CSSValue> valueForGridPosition(const GridPosition& position)
 
 static Ref<CSSValue> createTransitionPropertyValue(const Animation& animation)
 {
-    switch (animation.animationMode()) {
-    case Animation::AnimateNone:
+    switch (animation.property().mode) {
+    case Animation::TransitionMode::None:
         return CSSValuePool::singleton().createIdentifierValue(CSSValueNone);
-    case Animation::AnimateAll:
+    case Animation::TransitionMode::All:
         return CSSValuePool::singleton().createIdentifierValue(CSSValueAll);
-    case Animation::AnimateSingleProperty:
-        return CSSValuePool::singleton().createValue(getPropertyNameString(animation.property()), CSSUnitType::CSS_STRING);
-    case Animation::AnimateUnknownProperty:
+    case Animation::TransitionMode::SingleProperty:
+        return CSSValuePool::singleton().createValue(getPropertyNameString(animation.property().id), CSSUnitType::CSS_STRING);
+    case Animation::TransitionMode::UnknownProperty:
         return CSSValuePool::singleton().createValue(animation.unknownProperty(), CSSUnitType::CSS_STRING);
     }
     ASSERT_NOT_REACHED();
