Source/WebCore/platform/animation/Animation.h
@@ -92,11 +92,16 @@ public:
 
     double delay() const { return m_delay; }
 
-    enum AnimationMode {
-        AnimateAll,
-        AnimateNone,
-        AnimateSingleProperty,
-        AnimateUnknownProperty
+    enum class TransitionMode : uint8_t {
+        All,
+        None,
+        SingleProperty,
+        UnknownProperty
+    };
+
+    struct TransitionProperty {
+        TransitionMode mode;
+        CSSPropertyID id;
     };
 
     enum AnimationDirection {
@@ -118,10 +123,9 @@ public:
     const String& name() const { return m_name; }
     Style::ScopeOrdinal nameStyleScopeOrdinal() const { return m_nameStyleScopeOrdinal; }
     AnimationPlayState playState() const { return static_cast<AnimationPlayState>(m_playState); }
-    CSSPropertyID property() const { return m_property; }
+    TransitionProperty property() const { return m_property; }
     const String& unknownProperty() const { return m_unknownProperty; }
     TimingFunction* timingFunction() const { return m_timingFunction.get(); }
-    AnimationMode animationMode() const { return static_cast<AnimationMode>(m_mode); }
 
     void setDelay(double c) { m_delay = c; m_delaySet = true; }
     void setDirection(AnimationDirection d) { m_direction = d; m_directionSet = true; }
@@ -135,10 +139,9 @@ public:
         m_nameSet = true;
     }
     void setPlayState(AnimationPlayState d) { m_playState = static_cast<unsigned>(d); m_playStateSet = true; }
-    void setProperty(CSSPropertyID t) { m_property = t; m_propertySet = true; }
+    void setProperty(TransitionProperty t) { m_property = t; m_propertySet = true; }
     void setUnknownProperty(const String& property) { m_unknownProperty = property; }
     void setTimingFunction(RefPtr<TimingFunction>&& function) { m_timingFunction = WTFMove(function); m_timingFunctionSet = true; }
-    void setAnimationMode(AnimationMode mode) { m_mode = static_cast<unsigned>(mode); }
 
     void setIsNoneAnimation(bool n) { m_isNone = n; }
 
@@ -159,7 +162,7 @@ private:
     Animation(const Animation& o);
     
     // Packs with m_refCount from the base class.
-    CSSPropertyID m_property { CSSPropertyInvalid };
+    TransitionProperty m_property { TransitionMode::All, CSSPropertyInvalid };
 
     String m_name;
     String m_unknownProperty;
@@ -170,7 +173,6 @@ private:
 
     Style::ScopeOrdinal m_nameStyleScopeOrdinal { Style::ScopeOrdinal::Element };
 
-    unsigned m_mode : 2; // AnimationMode
     unsigned m_direction : 2; // AnimationDirection
     unsigned m_fillMode : 2; // AnimationFillMode
     unsigned m_playState : 2; // AnimationPlayState
@@ -195,12 +197,12 @@ public:
     static double initialIterationCount() { return 1.0; }
     static const String& initialName();
     static AnimationPlayState initialPlayState() { return AnimationPlayState::Playing; }
-    static CSSPropertyID initialProperty() { return CSSPropertyInvalid; }
+    static TransitionProperty initialProperty() { return { TransitionMode::All, CSSPropertyInvalid }; }
     static Ref<TimingFunction> initialTimingFunction() { return CubicBezierTimingFunction::create(); }
 };
 
 WTF::TextStream& operator<<(WTF::TextStream&, AnimationPlayState);
-WTF::TextStream& operator<<(WTF::TextStream&, Animation::AnimationMode);
+WTF::TextStream& operator<<(WTF::TextStream&, Animation::TransitionProperty);
 WTF::TextStream& operator<<(WTF::TextStream&, Animation::AnimationDirection);
 WTF::TextStream& operator<<(WTF::TextStream&, const Animation&);
 
